# browser-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md
backend-ai-engine/: Dockerfile  requirements.txt
worker/local-cli/: Dockerfile  entrypoint.sh  pyproject.toml
worker/local-cli/qiyuan_worker/: builtin_extensions.py  cli.py  config.py  crypto.py  device.py  errors.py  http_client.py  job_loop.py  manifest.py  models.py  sdk.py
worker/local-cli/qiyuan_worker/adapters/: __init__.py  base.py  browser_act.py  registry.py
worker/local-cli/qiyuan_worker/agent/: __init__.py  action_executor.py  action_schema.py  executor.py  llm_provider.py  observer.py  planner.py  policy.py  prompts.py  redaction.py  tools.py  trace.py
worker/local-cli/qiyuan_worker/artifacts/: __init__.py  collector.py
worker/local-cli/qiyuan_worker/browser/: __init__.py  policy.py  runtime.py
worker/local-cli/qiyuan_worker/commands/: __init__.py
worker/local-cli/qiyuan_worker/mcp/: server.py  tools.py
worker/local-cli/qiyuan_worker/protocols/: __init__.py  models.py
worker/local-cli/qiyuan_worker/runtime/: __init__.py  context.py  policy.py  runner.py
worker/local-cli/tests/: test_agent_planner.py  test_browser_act_adapter.py  test_browser_agent.py  test_browser_runtime.py  test_config.py  test_crypto.py  test_generic_browser_agent_adapter.py  test_http_client.py  test_llm_provider.py  test_mcp_server.py  test_mcp_tools.py  test_models.py  test_platform_uploaders.py  test_runtime.py  test_social_upload_adapter.py  test_weixin_desktop_sync_adapter.py  test_worker_extensions.py
(+184 files in other folders)
